--- a/css/style.css
+++ b/css/style.css
@@ -145,46 +145,197 @@ footer{
 	padding: 0.1% 0;
 }
 
-/*@media only screen and (max-width: 770px){
-	body{
-		margin: 0;
-		padding: 0;
-	}
-	#player-section{
-		width: 100%;
-		left: 0;
-		height: 50vh;
-		position: fixed;
-		padding: auto;
-		z-index: 1;
-		margin-top: 15px;
-	}
-	#player{
-		margin-bottom: 0;
-		width: 100%;
-		height: 60vh;
-		background-color: #000000;
-		display: block;
-	}
-	#playlist-section{
-		width: 92%;
-		left: 0;
-		margin-left: 0;
-		margin-top: 70vh;
-		margin-bottom: 20%;
-		display: block;
-		position: absolute;
-		padding: 0 2%;
-	}
-	#spacer{
-		margin-top: 8%;
-	}
-	#caption{
-		-webkit-box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.75);
-	    -moz-box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.75);
-		box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.75);
-	}
-}	*/
+#video-container {
+	width: 100%;
+	/*height: 365px;*/
+	position: relative;
+}
+
+#video-controls {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	padding: 5px;
+	opacity: .0;
+	height: 10%;
+	-webkit-transition: opacity .3s;
+	-moz-transition: opacity .3s;
+	-o-transition: opacity .3s;
+	-ms-transition: opacity .3s;
+	transition: opacity .3s;
+}
+
+#video-container:hover #video-controls {
+	display: block;
+	opacity: .9;
+}
+
+button {
+	background: none;
+	border: 0;
+}
+
+button:hover {
+	cursor: pointer;
+}
+
+button:focus{
+	outline: none;
+}
+
+#play-pause{
+	font-size: 25px;
+	float: left;
+	bottom: 0;
+	margin-bottom: 5px;
+}
+
+#seek-bar {
+	top: 0;
+	width: 100%;
+	display: none;
+}
+
+#mute-icon{
+	bottom: 0;
+	margin-right: 5px;
+	margin-bottom: -7px;
+}
+
+#volume-bar {
+	width: 60%;
+	bottom: 0;
+	position: relative;
+	margin: auto;
+	margin-left: 5px;
+}
+
+#full-screen{
+	margin-bottom: 5px;
+	margin-left: 5px;
+	float: right;
+	position: relative;
+}
+
+#bottom-right{
+	width: 40%;
+	float: right;
+	/*position: absolute;*/
+}
+
+
+
+#custom-seekbar
+{  
+  cursor: pointer;
+  width:100%;
+  height:3px;
+  margin-bottom: 10px;
+  background-color: #D1D3D4;
+  overflow: hidden;
+  position: relative;
+}
+
+#fill
+{
+  background-color: #2471CE;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 0%;
+}
+
+input[type=range] {
+    /*removes default webkit styles*/
+    -webkit-appearance: none;
+    
+    /*fix for FF unable to apply focus style bug */
+    /*border: 1px solid white;*/
+    
+    /*required for proper track sizing in FF*/
+    width: 100%;
+}
+input[type=range]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 3px;
+    background: #ddd;
+    border: none;
+    border-radius: 3px;
+}
+input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    border: none;
+    height: 7px;
+    width: 7px;
+    border-radius: 50%;
+    background: #2471CE;
+    margin-top: -2px;
+}
+input[type=range]:focus {
+    outline: none;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+    background: #ccc;
+}
+
+input[type=range]::-moz-range-track {
+    width: 100%;
+    height: 3px;
+    background: #ddd;
+    border: none;
+    border-radius: 3px;
+}
+input[type=range]::-moz-range-thumb {
+    border: none;
+    height: 7px;
+    width: 7px;
+    border-radius: 50%;
+    background: #2471CE;
+}
+
+/*hide the outline behind the border*/
+input[type=range]:-moz-focusring{
+    outline: 1px solid white;
+    outline-offset: -1px;
+}
+
+input[type=range]::-ms-track {
+    width: 100%;
+    height: 3px;
+    
+    /*remove bg colour from the track, we'll use ms-fill-lower and ms-fill-upper instead */
+    background: transparent;
+    
+    /*leave room for the larger thumb to overflow with a transparent border */
+    border-color: transparent;
+    border-width: 6px 0;
+
+    /*remove default tick marks*/
+    color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+    background: #777;
+    border-radius: 10px;
+}
+input[type=range]::-ms-fill-upper {
+    background: #ddd;
+    border-radius: 10px;
+}
+input[type=range]::-ms-thumb {
+    border: none;
+    height: 16px;
+    width: 16px;
+    border-radius: 50%;
+    background: #2471CE;
+}
+input[type=range]:focus::-ms-fill-lower {
+    background: #888;
+}
+input[type=range]:focus::-ms-fill-upper {
+    background: #ccc;
+}
 
 @media only screen and (max-width: 770px){
 	body, html{
@@ -268,6 +419,16 @@ footer{
 		line-height: 100%;
 	}
 }
+
+@media only screen and (max-width: 440px){
+	#volume-bar {
+		display: none;
+	}
+	#video-controls {
+		height: 15%;
+	}
+}
+
 @media only screen and (min-width: 800px){
 	#video-player{
 	-webkit-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75);
